--- a/Practicando/curso-youtube/index.html
+++ b/Practicando/curso-youtube/index.html
@@ -29,6 +29,10 @@
         </p>
     </main>
 
+    <section>
+        <h2>Planetas imprecionantes</h2>
+    </section>
+
     <footer>pagia de igor 2022</footer>
 </body>
 </html>
